--- a/dev/scss/base/_typography.scss
+++ b/dev/scss/base/_typography.scss
@@ -1,4 +1,4 @@
-@import url("http://fonts.googleapis.com/css?family=Lato:300,400,700");
+@import url("http://fonts.googleapis.com/css?family=Lato:200,300,400,700");
 
 $sans-serif: 'Lato', 'Helvetica Neue', Helvetica, Arial sans-serif;
 
@@ -6,13 +6,14 @@ body{
 	font-family: $sans-serif;
 	font-size: 18px;
 	font-weight: 300;
-	letter-spacing: 0.04rem;
-	word-spacing: 0.04rem;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 p{
 	font-size: 18px;
 	font-weight: 300;
+	margin-bottom: 27px;
 }
 
 h1{ 
@@ -38,6 +39,10 @@ h4{
 a{
 	text-decoration: none;
 	color: $red;
+}
+
+strong{
+	font-weight: 400;
 }
 
 
