--- a/dev/scss/main.scss
+++ b/dev/scss/main.scss
@@ -1,6 +1,7 @@
 @import "base/reset";
 @import 'bourbon';
 @import "base/grid";
+@import "base/breakpoints";
 @import "base/mixins";
 @import "base/variables";
 @import "base/typography";
