--- a/wp-content/themes/caskadia/dev/scss/base/_global.scss
+++ b/wp-content/themes/caskadia/dev/scss/base/_global.scss
@@ -96,14 +96,12 @@ header{
 					&:last-child{
 						margin-right: 0;
 					}
+					&.current-menu-item{
 
-					a{
-
-						&.current{
+						a{
 							font-weight: bold;
-						}
+						}	
 					}
-
 				}
 			}
 		}
