--- a/wp-content/themes/caskadia/dev/scss/base/_global.scss
+++ b/wp-content/themes/caskadia/dev/scss/base/_global.scss
@@ -27,6 +27,10 @@
 	float: right;
 }
 
+.mb-40 {
+    margin-bottom: 40px;
+}
+
 // COMMON ELEMENTS
 .btn{
 	font-size: 18px;
@@ -62,6 +66,7 @@ hr{
 	border: none;
 	border-top: 1px solid #d43e28;
 }
+
 
 
 // HEADER
@@ -154,7 +159,8 @@ section.hero{
 
 
 section.seperator{
-	background: url(../img/startup_images.jpg) no-repeat left top;
+	background-position: left top;
+	background-repeat: no-repeat;
 	background-size:cover;
 	min-height: 233px;
 	ul{
@@ -282,6 +288,10 @@ section.job-listing{
 		&:last-child{
 			margin-bottom: 0;
 		}
+
+		a{
+			padding: 15px 40px;
+		}
 	}
 
 
@@ -407,9 +417,16 @@ section.team-listing{
 
 // CONTACT US
 section.contact-map{
-	background: url(../img/caskadia_location.jpg) no-repeat center top;
-	background-size:cover;
+	//background: url(../img/caskadia_location.jpg) no-repeat center top;
+	//background-size:cover;
 	height: 400px;
+	padding: 0;
+
+		#map{
+			width: 100%;
+			height: 400px;
+			background-color: #eee;
+		}
 }
 
 
@@ -425,7 +442,9 @@ section.footer-callout{
 
 // FOOTER
 	footer{
-		@extend section;
+		position: relative;
+		padding: 50px 0;
+		text-align: center;
 		background: $footer-gray;
 
 		.footer-utility{
