--- a/wp-content/themes/caskadia/dev/scss/base/_typography.scss
+++ b/wp-content/themes/caskadia/dev/scss/base/_typography.scss
@@ -24,6 +24,10 @@ h1{
 	@include mobile{
 		font-size: 40px;
 	}
+
+	&.services_section_title{
+		margin-bottom: 0;
+	}
 }
 
 h2{
@@ -32,6 +36,10 @@ h2{
 	margin-bottom: 20px;
 	@include mobile{
 		font-size: 20px;
+	}
+
+	.services_section_copy &, .services-gray-banner &{
+		margin-bottom: 40px;
 	}
 }
 
